some changes and semicolons

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -95,7 +95,7 @@
           <div class='label'>SLIDE</div>\
           <div class='label'>IDEA</div>\
           Here are some typefaces that are a better fit for the content you are presenting\
-          <div id='fontbox'>"
+          <div id='fontbox'>";
           
         for (i=0; i<fonts.length; i++) {
           text += "<button class='font' style='font-family:"+fonts[i]+"'>"+fonts[i]+"</button>";
