Fixed brainstorm no-show bug.

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -25,7 +25,7 @@
       $( "#fixes" ).hide();
       $( "#home"  ).hide();
       $( "#ideas" ).hide();
-      $( "brainstorm").show();
+      $( "#brainstorm" ).show();
     });
    //////////////////////////////
    
