--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -136,9 +136,9 @@
       }
 
     //////////// brainstorm to suggested image
-    function get_current_page() {
-        return SlidesApp.getActivePresentation().getSelection().getCurrentPage();
-    }
+    // function get_current_page() {
+    //     return SlidesApp.getActivePresentation().getSelection().getCurrentPage();
+    // }
     function insert(imgNode, currPage) {
         console.log("In the insert func");
         //currPage.insertImage(imgNode.src, 0, 0, 500, 500);
