Fixed scrolling bug

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -1,5 +1,13 @@
 <script>
 // Nav Bar functions
+
+$(function() {
+    $( "#fixes" ).hide();
+    $( "#home" ).hide();
+    $( "#brainstorm" ).hide();
+    $( "#ideas" ).show();
+});
+
     $( "#ideanav" ).click(function() {
       $( "#fixes" ).hide();
       $( "#home" ).hide();
