Styled page titles

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -94,7 +94,7 @@ $(function() {
           <div id='fontbox'>";
           
         for (i=0; i<fonts.length; i++) {
-          text += "<button class='font grey lighten-2 waves-light waves-effect' style='font-family:"+fonts[i]+"'>"+fonts[i]+"</button>";
+          text += "<button class='font blacks lighten-2 waves-light waves-effect' style='font-family:"+fonts[i]+"'>"+fonts[i]+"</button>";
         }
         text += "</div></div>";
         $('#ideabox').append(text);
@@ -110,7 +110,7 @@ $(function() {
           Here are some quotes that can help make your slide more memorable";
         
         for (i=0; i<quotes.length; i++) {
-          text += "<button class='quote blue accent-2 waves-light " +
+          text += "<button class='quote black lighten-2 waves-light " +
               "waves-effect'>" + quotes[i] + "</button>";
         }
         text += "</div>";
