--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -104,7 +104,7 @@ $(function() {
           <div id='fontbox'>";
           
         for (i=0; i<fonts.length; i++) {
-          text += "<button class='font blacks lighten-2 waves-light waves-effect' style='font-family:"+fonts[i]+"'>"+fonts[i]+"</button>";
+          text += "<button class='font black lighten-2 waves-light waves-effect' style='font-family:"+fonts[i]+"'>"+fonts[i]+"</button>";
         }
         text += "</div></div>";
         $('#ideabox').append(text);
