Finished bottom navbar, matches design

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -39,7 +39,7 @@ $(function() {
 
 $(function() {
     // $("html, body").animate({ scrollTop: 0 }, "slow");
-    $('nav').css({"position": "fixed", "bottom":"0"});
+    $('#navbar').css({"position": "fixed", "bottom":"0"});
 });
     
     $(function() {
