Read from survey in database

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -59,7 +59,7 @@ $(function() {
         goal_data = data[0];
         idea_data = data[1];
         fix_data = data[2];
-        
+          google.script.run.readSurvey();
         fill_goals(goal_data);
         fill_ideas(idea_data);
         fill_fixes(fix_data);
@@ -69,10 +69,13 @@ $(function() {
       function fill_goals(goal_data) {
       // [time, purpose, audience]
           // get variables from the user survey
+
+          var time, purpose, audience;
         time = goal_data[0];
         purpose = goal_data[1];
         audience = goal_data[2];
-
+        
+          google.script.run.readSurvey();
         // put them in their respective divs and style them
           var time_text = "<span id='goal_time'>" + time + "\
             </span>";
