--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -106,8 +106,11 @@
       }
       
       function fill_fixes(fix_data) {
-        for(i = 0; i < fix_data.length; i++) {
-          add_fix(fix_data[i]);
+        if (fix_data.length < 1 ) { add_fix('no fixes found'); }
+        else {
+          for(i = 0; i < fix_data.length; i++) {
+            add_fix(fix_data[i]);
+          }
         }
       }
       
