--- a/jquery/survey_start.js.html
+++ b/jquery/survey_start.js.html
@@ -19,17 +19,17 @@
         if (document.getElementById('students').checked) {
             var ans = document.getElementById('students_answer').innerHTML;
             console.log(ans);
-            audience_ans = ans;
+            audience_ans = 'students';
         }
         else if (document.getElementById('stakeholders').checked) {
             var ans = document.getElementById('stakeholders_ans').innerHTML;
             console.log(ans);
-            audience_ans = ans;
+            audience_ans = 'stakeholders';
         }
         else if (document.getElementById('academia').checked) {
             var ans = document.getElementById('academia_ans').innerHTML;
             console.log(ans);
-            audience_ans = ans;
+            audience_ans = 'academia';
         }
         else {
             var ans = document.getElementById('spec1').value;
@@ -65,17 +65,17 @@
         if (document.getElementById('convince').checked) {
             var ans = document.getElementById('convince_ans').innerHTML;
             console.log(ans);
-            goal_ans = ans;
+            goal_ans = 'to convince';
         }
         else if (document.getElementById('sell').checked) {
             var ans = document.getElementById('sell_ans').innerHTML;
             console.log(ans);
-            goal_ans = ans;
+            goal_ans = 'to sell';
         }
         else if (document.getElementById('deliver').checked) {
             var ans = document.getElementById('deliver_ans').innerHTML;
             console.log(ans);
-            goal_ans = ans;
+            goal_ans = 'to deliver';
         }
         else {
             var ans = document.getElementById('spec3').value;
