--- a/jquery/create_template.js.html
+++ b/jquery/create_template.js.html
@@ -12,22 +12,11 @@
      * maintained.
      *
      */
-$(function() {
-    google.script.run.withSuccessHandler(fill_template).readSurvey();
-});
 
     function fill_template(survey_data) {
-        // [time, purpose, audience]
-        // get variables from the user survey
 
         var time, purpose, audience, gain;
-        // time = goal_data[0];
-        // purpose = goal_data[1];
-        // audience = goal_data[2];
 
-
-        // var goals = google.script.run.readSurvey();
-        //console.log(survey_data);
         // gets goal data from database
         audience = survey_data[0];
         time = survey_data[1];
@@ -35,16 +24,32 @@ $(function() {
         gain = survey_data[3];
 
         // put them in their respective divs and style them
-        var time_text = "<span id='num_slides'>" + time + "\
-            </span>";
+        //
+        var lower_bound_slides_per_minute = 0.6; // 3 slides per 5 minutes
+        var upper_bound = 1; // 5 slides per 5 minutes
+        var num_slides = "<span class='num_slides'>" + time*(lower_bound_slides_per_minute) + "\
+             to " + time*(upper_bound) + " Slides</span>";
         var goal_text = "<span class='temp_goal'>" + purpose + "\
             </span>";
         var audience_text = "<span class='temp_aud'>" + audience + "\
             </span>";
 
-        $('#number_of_slides').append(time_text);
+        $('#number_of_slides').append(num_slides);
         $('#template_goal').append(goal_text);
         $('#template_audience').append(audience_text);
+    }
+
+    $(function() {
+        google.script.run.withSuccessHandler(fill_template).readSurvey();
+    });
+
+    function generateTemplate() {
+        google.script.host.close();
+        console.log("I'm about to generate the template!");
+        console.log("First, I read from database.")
+        google.script.run.withSuccessHandler().readSurvey();
+        //google.script.run.showSidebar();
+
     }
 
 </script>
