--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -94,7 +94,7 @@ $(function() {
 
 
 function refreshData() {
-    console.log('Refreshed a minute later!')
+    console.log('Refreshed a minute later!');
     google.script.run.withSuccessHandler(fill_goals).readSurvey();
     google.script.run.withSuccessHandler(fill_fixes).check_presentation();
     google.script.run.withSuccessHandler(fill_ideas).get_ideas();
