--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -82,10 +82,11 @@ $(function() {
     google.script.run.withSuccessHandler(output).test_quotes_api();
 });
 
-$(function() {
-    console.log("Creating a auto-refresh");
-    google.script.run.createTrigger();
-});
+// Triggers only work when the app is deployed. It is disabled for the Test Add-on environment
+// $(function() {
+//     console.log("Creating a auto-refresh");
+//     google.script.run.createTrigger();
+// });
 
 // $(function() {
 //     console.log("Deleting a auto-refresh");
