--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -97,7 +97,8 @@ function refreshData() {
     console.log('Refreshed!')
     google.script.run.withSuccessHandler(fill_goals).readSurvey();
     google.script.run.withSuccessHandler(fill_fixes).check_presentation();
-    google.script.run.withSuccessHandler(fill_ideas).get_ideas();
+    google.script.run.withSuccessHandler(add_font_idea).get_fonts();
+    google.script.run.withSuccessHandler(add_quote_idea).get_quotes();
 }
 
 function output(fonts) {
