--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -45,9 +45,12 @@ $(function() {
 $(function() {
   //google.script.run.withSuccessHandler(fill_goals).get_purpose();
   google.script.run.withSuccessHandler(fill_goals).readSurvey();
-  google.script.run.withSuccessHandler(handle_check).check_presentation();
+  google.script.run.withSuccessHandler(handle_check)._check_presentation();
   google.script.run.withSuccessHandler(add_font_idea).get_fonts();
   google.script.run.withSuccessHandler(add_quote_idea).get_quotes();
+  google.script.run.withSuccessHandler(fill_fonts).get_fonts_used();
+  google.script.run.withSuccessHandler(fill_fontsizes).get_fontsizes_used();
+
 });
 
 // testing the fixes page
@@ -103,29 +106,37 @@ function refreshData() {
     google.script.run.withSuccessHandler(add_quote_idea).get_quotes();
 }
 
-function handle_check(arr) {
-  fill_fixes(arr[0]);
-  fill_checklist(arr[1], arr[2], arr[3], arr[4]);
+function handle_check(check_arr) {
+  fill_fixes(check_arr[0]);
+  fill_slide_ratio(check_arr[1], check_arr[2]);
 }
 
-function fill_checklist(fonts, fontsizes, num_bad_slides, num_slides) {
+function fill_fonts(fonts) {
   var font_string = '';
-  var fontsize_string = '';
-  var good_slide_string = ' ' + num_slides-num_bad_slides + ' / ' + num_slides + 'slides are clean.'
   for (i=0; i < fonts.length; i++) {
     if(i!=0) { font_string += ', '}
-    font_string += fonts[i]
+    font_string += fonts[i];
   }
-  font_string += '.'
+  font_string += '.';
+  $('fonts_used').text(font_string);
+}
+
+function fill_fontsizes(fontsizes) {
+  var fontsize_string = '';
   for (i=0; i < fontsizes.length; i++) {
     if(i!=0) { fontsize_string += ', '}
-    fontsize_string += fontsizes[i]
+    fontsize_string += fontsizes[i];
   }
-  fontsize_string += '.'
-  $('clean_slides').text(good_slide_string);
-  $('fonts_used').text(font_string);
+  fontsize_string += '.';
   $('fontsizes_used').text(fontsize_string);
 }
+
+
+function fill_slide_ratio(num_bad_slides, num_slides) {
+  var good_slide_string = ' ' + num_slides-num_bad_slides + ' / ' + num_slides + 'slides are clean.'
+  $('clean_slides').text(good_slide_string);
+}
+
     function output(fonts) {
         console.log(fonts);
     }
