Commented out handling of brainstorm keywords

--- a/jquery/sidebar.js.html
+++ b/jquery/sidebar.js.html
@@ -102,12 +102,12 @@ $(function () {
 });
 
 // read brainstorm and update images div
-$(function() {
-    console.log('Updating images div with those keywords populated from bstorm DB');
-    var keywords = google.script.run.readBrainstorm();
-    console.log(keywords);
-    google.script.run.withSuccessHandler(updateDivWithImages).urlPerKeyword(keywords);
-});
+// $(function() {
+//     console.log('Updating images div with those keywords populated from bstorm DB');
+//     var keywords = google.script.run.readBrainstorm();
+//     console.log(keywords);
+//     google.script.run.withSuccessHandler(updateDivWithImages).urlPerKeyword(keywords);
+// });
 
 function refreshData() {
     console.log('Refreshed a minute later!');
